--- a/Marthas Coffee App Movil.csproj
+++ b/Marthas Coffee App Movil.csproj
@@ -49,6 +49,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\SandBox.png" />
+	  <None Remove="Resources\Images\sansan.png" />
 	</ItemGroup>
 
 	<ItemGroup>
