se implemento un splash screen y se ajustaron los entry

--- a/Marthas Coffee App Movil.csproj
+++ b/Marthas Coffee App Movil.csproj
@@ -35,7 +35,6 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -79,6 +78,11 @@
 	  <None Remove="Resources\Images\sansan.png" />
 	  <None Remove="Resources\Images\sasa.jpg" />
 	  <None Remove="Resources\Images\sushi.jpg" />
+	  <None Remove="Resources\Splash\splog.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiSplashScreen Include="Resources\Splash\splog.png" Color="#111010" />
 	</ItemGroup>
 
 	<ItemGroup>
