Aplicación de cambios 17

--- a/Marthas Coffee App Movil.csproj
+++ b/Marthas Coffee App Movil.csproj
@@ -110,13 +110,13 @@
 	  <MauiXaml Update="Pages\Bocadillos.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Pages\CrearCuenta.xaml">
+	  <MauiXaml Update="Pages\MainPage Crear Cuenta.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\MainPage Cuenta.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\Mochi.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </MauiXaml>
-	  <MauiXaml Update="Pages\Cuenta.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Pages\Inicio.xaml">
